# fedora-coreos-pinger

./: .gitignore  .travis.yml  Cargo.toml  DEPRECATED.md  Dockerfile  README.md  rust-fedora-coreos-metrics-client.spec
docs/: release-guide.md
src/: main.rs
src/agent/: mod.rs
src/agent/full/: container_runtime.rs  hardware.rs  lsblk.rs  lscpu.rs  lsmem.rs  mock_tests.rs  mod.rs  network.rs
src/agent/full/hardware/: lsblk.rs  lscpu.rs  lsmem.rs  mod.rs
src/agent/minimal/: instance_type.rs  mock_tests.rs  mod.rs  os_release.rs  platform.rs
src/config/: fragments.rs  inputs.rs  mod.rs
src/identity/: mod.rs  os_release.rs  platform.rs
src/minimal/: instance_type.rs  mod.rs  os_release.rs  platform.rs
src/providers/: mod.rs
src/providers/aws/: mock_tests.rs  mod.rs
src/rpm_ostree/: cli_status.rs  mod.rs
src/util/: clock.rs  cmdline.rs  mod.rs
systemd/: fedora-coreos-metrics-client.service
tests/fixtures/: rpm-ostree-status.json
tests/full/fedora-coreos-pinger/config.d/: 10-default-enable.toml
