[package]
name = "fedora-coreos-metrics-client"
version = "0.1.0"
authors = ["Robert Fairley <rfairley@redhat.com>"]
edition = "2018"
description = "Metrics collection client for Fedora CoreOS"
documentation = "https://github.com/coreos/fedora-coreos-metrics-client"
homepage = "https://github.com/coreos/fedora-coreos-metrics-client"
repository = "https://github.com/coreos/fedora-coreos-metrics-client"
readme = "README.md"
license = "Apache-2.0"
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
clap = "2.33"
env_logger = "^0.6.1"
failure = "^0.1.5"
liboverdrop = "^0.0.2"
log = "^0.4.6"
serde = { version = "^1.0.91", features = ["derive"] }
toml = "^0.5.1"
